# calendar-agent

./: .env.example  .gitignore  :   :   AGENTS.md  Makefile  alembic.ini  bot.py  config.py  docker-compose.yml  llm_parser.py  main.py  models.py  pyproject.toml  requirements.txt  time_utils.py
calendar_clients/: icloud.py  yandex.py
database/: config.py  connection.py
migrations/: env.py
migrations/versions/: 78459d2c517f_initial_schema.py
models/: database_models.py
scripts/: init_admin.py
src/api/: telegram_handlers.py
src/dao/: database.py
src/managers/: calendar_manager.py  event_logger.py  whitelist_manager.py
src/models/: config.py  database_models.py  domain.py
src/services/: llm_service.py
src/services/calendar/: base.py  icloud.py  yandex.py
src/utils/: datetime_utils.py  encryption.py  json_logger.py
tests/: test_basic.py  test_calendar_clients.py  test_config.py  test_models.py  test_time_utils.py
tests/integration/: conftest.py  test_calendar_service.py  test_encryption.py  test_end_to_end.py  test_event_logging.py  test_whitelist.py  test_whitelist_service.py
