[project]
name = "calendar-bot"
version = "2.0.0"
description = "Multi-user calendar bot with whitelist"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Author", email = "author@example.com" }
]
dependencies = [
    "aiogram>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "caldav>=1.3.0",
    "dateparser>=1.1.0",
    "natasha>=1.6.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]